--- a/web/index.html
+++ b/web/index.html
@@ -371,7 +371,7 @@
             <div class="message-container custom-scrollbar"></div>
         </div>
         <div id="hint-box" class="flash" hidden>
-            <<div title="Close" class="close-flash-container">
+            <div title="Close" class="close-flash-container">
                 <button class="close-flash-button mdc-icon-button material-icons">close</button>
             </div>
             <div class="message-container custom-scrollbar"></div>
